<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_dialog_text1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/whats_new"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/features"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingLeft="10dip"
            android:text="@string/new_feature_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/twitter_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/twitter_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="15dip"
            android:text="@string/twitter_url" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/basic_usage"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_menu_explanation" />
        <!-- <ImageView -->
        <!-- android:src="@drawable/actionoverflow" -->
        <!-- android:contentDescription="@string/help_menu_action_overflow_img_description" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:scaleType="fitCenter" -->
        <!-- android:paddingBottom="15dip" -->
        <!-- android:adjustViewBounds="true"/> -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/pattern_help_dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_dialog_text2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_dialog_text3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_dialog_text4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:text="@string/help_dialog_text5" />
    </LinearLayout>

</ScrollView>